syntax = "proto3";

message ImageUpdate {
    uint64 timestamp = 1;
    bytes image = 2;
}